MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Validator__mdt/Business_Process_Validator__mdt.object-meta.xml
<CustomObject>
    <description>this is to validate each business process</description>
    <label>Business Process Validator</label>
    <pluralLabel>Business Process Validator</pluralLabel>
</CustomObject>