MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Validator__mdt/fields/Business_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Name__c</fullName>
    <label>Business Process Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>