MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Validator__mdt/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>