MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Validator__mdt/fields/Validator_Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Validator_Apex_Class_Name__c</fullName>
    <label>Validator Apex Class Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>